# hawkamah

./: .env.production  .firebaserc  .gitignore  App.tsx  DESIGN.md  PRD-assessment-anticheat.md  PRODUCT.md  README.md  constants.ts  firebase-applet-config.json  firebase-blueprint.json  firebase.json  firebase.ts  firestore.rules  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
.claude/: launch.json
.firebase/: hosting.ZGlzdA.cache
components/: AdminPanel.tsx  ArtifactProgress.tsx  AssessmentGate.tsx  AssessmentScreen.tsx  BackButton.tsx  DepartmentBuilder.tsx  DiagramChatEditor.tsx  DiagramChatShell.tsx  DocumentCanvas.tsx  EditableDiagram.tsx  EmployeeOnboarding.tsx  EmployeePortalScreen.tsx  ErrorBoundary.tsx  (+35 more)
copilot/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
copilot/hawkama_copilot/: __init__.py  agent.py  api.py  chunking.py  cli.py  config.py  conversations.py  extraction.py  genai_client.py  generation.py  governance_operating_model_skill.md  rag.py  skill.py  storage.py  vector_store.py
copilot/hawkama_copilot/exporters/: __init__.py  docx_export.py  html_export.py  markdown_ast.py  pdf_export.py  pptx_export.py  xlsx_export.py
copilot/tests/: conftest.py  test_api.py  test_chunking.py  test_conversational.py  test_conversations.py  test_exporters.py  test_generation_pages.py  test_grounded_engine.py  test_markdown_ast.py  test_plan_and_grounding.py  test_rag_and_generation.py  test_vector_store.py  test_wizard.py
(+120 files in other folders)
