[project]
name = "hawkama-copilot"
version = "0.1.0"
description = "Hawkama Copilot — Python AI agent for governance & operating-model work (google-genai + RAG + multi-format generation)"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.10.0",
    "numpy>=1.26",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "reportlab>=4.0",
    "arabic-reshaper>=3.0",
    "python-bidi>=0.4",
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
hawkama = "hawkama_copilot.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hawkama_copilot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
